--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,20 @@
-server.port=8090 
-mybatis.mapper-locations=classpath:mapping/*.xml
+server.port=8090
+
+########################################################
+## 数据源配置
+########################################################
+spring.datasource.url=jdbc:mysql://localhost:3306/miaosha?useUnicode=true&characterEncoding=utf8&useSSL=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+########################################################
+## Mybatis 配置
+########################################################
+mybatis.typeAliasesPackage=com.zhyn4j.miaosha.model
+mybatis.mapperLocations=classpath:mapping/*.xml
+#mybatis.type-aliases-package=com.zhyn4j.miaosha.model
+#mybatis.mapper-locations=classpath:mapping/*.xml
+
+
+
+########################################################
